@@ -12,6 +12,7 @@
 #include "resource3.h"  // STRING resources
 #include "..\..\corelib\corelib.h"  // corelib STRING resources
 #include "VirtualKeyboard\VKresource.h"  // Virtual Keyboard resource
+
 /////////////////////////////////////////////////////////////////////////////
 #undef APSTUDIO_READONLY_SYMBOLS
 
@@ -368,7 +369,7 @@ BEGIN
     ICON            IDI_TRAY_YELLOW,IDC_STATIC,161,219,20,20
 END
 
-IDD_PS_PASSWORDPOLICY DIALOGEX 0, 0, 239, 210
+IDD_PS_PASSWORDPOLICY DIALOGEX 0, 0, 239, 207
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Password Policy"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -405,7 +406,9 @@ BEGIN
     LTEXT           "Or",IDC_STATIC,10,144,86,8
     CONTROL         "Use &Hexadecimal digits only (0-9,a-f)",IDC_USEHEXDIGITS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,160,204,10
-    PUSHBUTTON      "&Generate",IDC_RANDOM,94,184,50,14
+    PUSHBUTTON      "&Generate",IDC_RANDOM,180,184,50,14
+    EDITTEXT        IDC_PASSWORD,13,184,105,14,ES_PASSWORD | ES_AUTOHSCROLL
+    PUSHBUTTON      "&Copy",IDC_COPYPASSWORD,130,184,44,15,BS_CENTER
 END
 
 IDD_PS_PASSWORDHISTORY DIALOGEX 0, 0, 240, 134
@@ -1555,6 +1558,11 @@ BEGIN
         BOTTOMMARGIN, 273
     END
 
+    IDD_PS_PASSWORDPOLICY, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 206
+    END
+
     IDD_PS_MISC, DIALOG
     BEGIN
         BOTTOMMARGIN, 241
@@ -1716,6 +1724,7 @@ LANGUAGE 9, 1
 #include "afxres.rc"         // Standard components
 #endif
 #endif
+
 /////////////////////////////////////////////////////////////////////////////
 #endif    // not APSTUDIO_INVOKED
 
